# aggregatron-plugins

./: .gitignore  CMakeLists.txt  README.md
samplemap/: MapAnalysis.cpp  MapAnalysis.h  MapDebug.cpp  SampleMapEditor.cpp  SampleMapEditor.h  SampleMapProcessor.cpp  SampleMapProcessor.h
scalescope/: April10App.cpp  April10MainComponent.cpp  April10MainComponent.h  ScaleScopeApp.cpp  ScaleScopeEditor.cpp  ScaleScopeEditor.h  ScaleScopeMainComponent.cpp  ScaleScopeMainComponent.h  ScaleScopeProcessor.cpp  ScaleScopeProcessor.h  ScaleScopeState.cpp  ScaleScopeState.h
simplevocoder/: SimpleVocoderEditor.cpp  SimpleVocoderEditor.h  SimpleVocoderProcessor.cpp  SimpleVocoderProcessor.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vocoder/: VocoderEditor.cpp  VocoderEditor.h  VocoderProcessor.cpp  VocoderProcessor.h
